src/objects/CostDistributionLine__c.object
<CustomObject>
    <description>Object used to store cost distribution line items from Oracle</description>
    <fields>
        <fullName>AcctBurdCostTimesQuantity__c</fullName>
        <formula>AcctBurdenedCost__c *  Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AcctBurdCostTimesQuantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctBurdenedCost__c</fullName>
        <label>Acct Burdened Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctRawCostTimesQuantity__c</fullName>
        <formula>AcctRawCost__c  *  Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AcctRawCostTimesQuantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctRawCost__c</fullName>
        <label>Acct Raw Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BillableFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billable Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DenomBurdenedCost__c</fullName>
        <label>Denom Burdened Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DenomRawCost__c</fullName>
        <label>Denom Raw Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ExpenditureItemID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Expenditure Item</label>
        <referenceTo>ExpenditureItem__c</referenceTo>
        <relationshipName>Cost_Distribution_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExpenditureType__c</fullName>
        <formula>ExpenditureItemID__r.ExpenditureType__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expenditure Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GLDate__c</fullName>
        <label>GL Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GLPeriodName__c</fullName>
        <label>GL Period Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LineNum__c</fullName>
        <label>Line Num</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OracleSyncErrorMessage__c</fullName>
        <label>Oracle Sync Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PADate__c</fullName>
        <label>PA Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PAPeriodName__c</fullName>
        <label>PA Period Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjFunCurrencyCode__c</fullName>
        <label>ProjFunCurrencyCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjFuncBurdenedCost__c</fullName>
        <label>ProjFuncBurdenedCost</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjFuncRawCost__c</fullName>
        <label>ProjFuncRawCost</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectBurdenedCost__c</fullName>
        <label>Project Burdened Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectCurrencyCode__c</fullName>
        <label>Project Currency Code</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectNumber__c</fullName>
        <label>Project Number</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipName>Cost_Distribution_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>ProjectRawCost__c</fullName>
        <label>Project Raw Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RecordStatus__c</fullName>
        <description>P = Pending 
T = Transfer (Success) 
E = Error 
S = Successful</description>
        <inlineHelpText>P = Pending 
T = Transfer (Success) 
E = Error 
S = Successful</inlineHelpText>
        <label>Oracle Sync Status</label>
        <picklist>
            <picklistValues>
                <fullName>P</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RequestID__c</fullName>
        <label>Request ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaskNumber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Task Number</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Task Project must match Cost Distribution Project.</errorMessage>
            <filterItems>
                <field>pse__Project_Task__c.pse__Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.ProjectNumber__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>pse__Project_Task__c</referenceTo>
        <relationshipName>CostDistributionLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>xxCost Distribution Line</label>
    <nameField>
        <label>Cost Distribution Line #</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>xxCost Distribution Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>